# OOP-Prog-ND

./: .clang-format  .gitignore  CMakeLists.txt  README.md
1-Ivadas/: 10-pirminis.cpp  5-kvadratai.cpp  6-suma.cpp  7-nesikartojancios_reiksmes.cpp  8-rikiavimas.cpp  9-faktorialas.cpp  CMakeLists.txt  faktorialas.cpp  rikiavimas.cpp  unique_reiksmes.cpp
2-Objektai-ir-klases/: 1-darbuotojas.cpp  2-darbuotojas.cpp  3-darbuotojas.cpp  4-darbuotojas.cpp  5-figura.cpp  5-koordinates-senas.cpp  5-koordinates.cpp  6-studentas.cpp  CMakeLists.txt
3-Klasiu-kompozicija/: 1-darbuotojas.cpp  1-staciakampis.cpp  2-darbuotojas.cpp  2-kugis.cpp  3-kugis.cpp  4-kugis.cpp  CMakeLists.txt
4-Paveldimumas/: 1-studentas.cpp  2-ritinys.cpp  2-vektorius.cpp  3-ritinys.cpp  3-staciakampis.cpp  4-staciakampis.cpp  CMakeLists.txt
5-Polimorfizmas/: 1-funkcija.cpp  2-figura.cpp  3-prekes.cpp  CMakeLists.txt
6-Sablonai/: 1-staciakampis.cpp  2-darbuotas.cpp  2-trikampis.cpp  3-darbuotojas.cpp  4-darbuotojas.cpp  CMakeLists.txt
7-Spec-klases/: 1-prekes.cpp  2-prekes.cpp  3-prekes.cpp  4-staciakampis.cpp  5-kavos-aparatas.cpp  CMakeLists.txt  darbuotojas-senas.cpp
8-Rodykles-i-funkcijas/: 1-darbuotojas.cpp  2-personalas.cpp  3-personalas.cpp  CMakeLists.txt  darbuotojas.h  meniu.h  personalas.h
8-Rodykles-i-funkcijas/meniu/: darbuotojo.h  meniu.h  personalo.h
9-STL/: 1-dvejetainiai.cpp  2-skaiciu-seka.cpp  3-kalendorius.cpp  CMakeLists.txt  kalendorius.h
9-STL/meniu/: kalendoriaus.h
