cmake_minimum_required(VERSION 3.22)
project(OOP_Prog_ND)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(1-Ivadas)
add_subdirectory(2-Objektai-ir-klases)
add_subdirectory(3-Klasiu-kompozicija)
add_subdirectory(4-Paveldimumas)
add_subdirectory(5-Polimorfizmas)
add_subdirectory(6-Sablonai)
add_subdirectory(7-Spec-klases)
add_subdirectory(8-Rodykles-i-funkcijas)
