cmake_minimum_required(VERSION 3.22)
project(OOP_Prog_ND)

set(CMAKE_CXX_STANDARD 14)

add_executable(1.5-kvadratai 5-kvadratai.cpp)
add_executable(1.6-suma 6-suma.cpp)
add_executable(1.7-unique_reiksmes 7-unique_reiksmes.cpp)
add_executable(1.8-rikiavimas 8-rikiavimas.cpp)
add_executable(1.9-faktorialas 9-faktorialas.cpp)
add_executable(1.10-pirminis 10-pirminis.cpp)
