cmake_minimum_required(VERSION 3.22)
project(OOP_Prog_ND)

set(CMAKE_CXX_STANDARD 14)

add_executable(2.1-darbuotojas 1-darbuotojas.cpp)
add_executable(2.2-darbuotojas 2-darbuotojas.cpp)
add_executable(2.3-darbuotojas 3-darbuotojas.cpp)
add_executable(2.4-darbuotojas 4-darbuotojas.cpp)
add_executable(2.5-figura 5-figura.cpp)
add_executable(2.6-studentas 6-studentas.cpp)
