cmake_minimum_required(VERSION 3.22)
project(OOP_Prog_ND)

set(CMAKE_CXX_STANDARD 14)

add_executable(7.1-prekes 1-prekes.cpp)
add_executable(7.2-prekes 2-prekes.cpp)
add_executable(7.3-prekes 3-prekes.cpp)
add_executable(7.4-staciakampis 4-staciakampis.cpp)
add_executable(7.5-kavos-aparatas 5-kavos-aparatas.cpp)
